[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/Enemy4.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemy2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/mini_enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Enemy3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 63 )

[node name="Enemy4" type="KinematicBody2D"]
position = Vector2( 614, 376 )
script = ExtResource( 2 )
mini_enemy = ExtResource( 4 )
basic_enemy = ExtResource( 6 )
nemesis = ExtResource( 3 )
spawner = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.827451, 1, 0, 1 )
self_modulate = Color( 0.709804, 1, 0, 1 )
position = Vector2( 1, 0 )
scale = Vector2( 1, 2 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="pos" type="Position2D" parent="."]
position = Vector2( 4, -78 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( -76, 4 )

[node name="pos3" type="Position2D" parent="."]
position = Vector2( 59, -46 )

[node name="pos4" type="Position2D" parent="."]
position = Vector2( 72, -2 )

[node name="pos5" type="Position2D" parent="."]
position = Vector2( 66, 41 )

[node name="pos6" type="Position2D" parent="."]
position = Vector2( -73, -40 )

[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
